feat: corrige configuração CORS e move migrações para o local correto