@@ -2,6 +2,10 @@ package br.com.one.jobportal.config;
 
 import br.com.one.jobportal.security.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
+import org.apache.catalina.connector.Connector;
+import org.springframework.boot.web.embedded.tomcat.TomcatConnectorCustomizer;
+import org.springframework.boot.web.embedded.tomcat.TomcatServletWebServerFactory;
+import org.springframework.boot.web.server.WebServerFactoryCustomizer;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationProvider;
@@ -16,6 +20,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -50,15 +55,53 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("*"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        
+        // Permitir origens específicas (substitua com as origens do seu frontend)
+        configuration.setAllowedOrigins(List.of(
+            "http://localhost:3000", // React padrão
+            "http://localhost:5173"  // Vite padrão
+        ));
+        
+        // Métodos permitidos
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        
+        // Cabeçalhos permitidos
+        configuration.setAllowedHeaders(List.of(
+            "Authorization",
+            "Content-Type",
+            "Accept",
+            "X-Requested-With",
+            "Cache-Control"
+        ));
+        
+        // Cabeçalhos expostos
+        configuration.setExposedHeaders(List.of(
+            "Authorization",
+            "Content-Disposition"
+        ));
+        
+        // Permitir credenciais
         configuration.setAllowCredentials(true);
-        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        
+        // Tempo máximo do cache de preflight
         configuration.setMaxAge(3600L);
         
+        // Configuração para todos os caminhos
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+        
         return source;
+    }
+    
+    // Configuração adicional para lidar com requisições HTTP/HTTPS
+    @Bean
+    public WebServerFactoryCustomizer<TomcatServletWebServerFactory> servletContainer() {
+        return factory -> factory.addConnectorCustomizers(
+            (Connector connector) -> {
+                connector.setProperty("relaxedPathChars", "<>[\\]^`{|}");
+                connector.setProperty("relaxedQueryChars", "<>[\\]^`{|}");
+                connector.setProperty("maxHttpHeaderSize", "65536");
+            }
+        );
     }
 }
